namespace-governance-workload/gitops/base/profiles/app-namespace/networkpolicy-allow-from-openshift-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
        - namespaceSelector:
            matchLabels:
              policy-group.network.openshift.io/ingress: ""
        - namespaceSelector:
            matchLabels:
              policy-group.network.openshift.io/host-network: ""
